# Python_WEB

./: AddressBook.py  Bot.py  dockerfile  factorize.py  logs.txt  pyproject.toml  sort_thread.py
Factorize/: factorize.py
Module_2/: Diagram_project.drawio  dockerfile  info.py  logs.txt  pyproject.toml
Module_3/: factorize.py  sort_thread.py
Module_4/: main.py
Module_4/storage/: data.json
Module_5/: ex01.py  main.py
