[tool.poetry]
name = "finalproject"
version = "0.1.0"
description = ""
authors = ["Polshvedkin-Aleksandr <130376742+Polshvedkin-Aleksandr@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
